--- a/project_planning_stage_loh.ipynb
+++ b/project_planning_stage_loh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e7dde14d-3ae8-4688-b4a7-db5457f57edf",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
    "id": "a27b80f4-7b34-4b94-82fc-6ce9ff673b9f",
    "metadata": {},
    "source": [
-    "### **DATA DESCRIPTION**\n",
+    "## **DATA DESCRIPTION**\n",
     "The dataset was collected by The Pacific Laboratory for Artificial Intelligence (PLAI), which is a research group at UBC. PLAI set up a MineCraft server where they observed the players' gameplay, speech, and key presses.\n",
     "\n",
     "The dataset consists of two files: players.csv and sessions.csv. \n",
@@ -64,12 +64,12 @@
     "\n",
     "Below are the variables' summary statistics and what they represent. \n",
     "\n",
-    "#### Experience \n",
+    "#### experience \n",
     "* Data type = factor\n",
     "* Describes what skillset the player is classified: Amateur, Beginner, Regular, Pro, Veteran\n",
     "* Class and mode = Character\n",
     "\n",
-    "#### Subscribe:\n",
+    "#### subscribe:\n",
     "* Data type = logical\n",
     "* Describes whether the player is subscribed to the game-related newsletter\n",
     "* 144 TRUE and 52 FALSE \n",
@@ -89,7 +89,7 @@
     "* Data type = Character\n",
     "* The name of the player\n",
     "\n",
-    "#### Gender:\n",
+    "#### gender:\n",
     "* Data type = factor\n",
     "* What gender the player identifies as (Male, Female, Non-binary, Two-Spirited, Agender, prefers not to say, other)\n",
     "* Class and mode = Character\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "3110f64e-fb96-4b84-a2de-9d3bd37cd016",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "985a2da5-68a6-4462-9bec-bd02ebccadab",
    "metadata": {},
    "outputs": [
@@ -215,13 +215,80 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 23 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>experience</th><th scope=col>gender</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Pro    </td><td>Male  </td></tr>\n",
+       "\t<tr><td>Veteran</td><td>Male  </td></tr>\n",
+       "\t<tr><td>Amateur</td><td>Female</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>Amateur</td><td>Non-binary  </td></tr>\n",
+       "\t<tr><td>Regular</td><td>Two-Spirited</td></tr>\n",
+       "\t<tr><td>Pro    </td><td>Other       </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 23 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " experience & gender\\\\\n",
+       " <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t Pro     & Male  \\\\\n",
+       "\t Veteran & Male  \\\\\n",
+       "\t Amateur & Female\\\\\n",
+       "\t ⋮ & ⋮\\\\\n",
+       "\t Amateur & Non-binary  \\\\\n",
+       "\t Regular & Two-Spirited\\\\\n",
+       "\t Pro     & Other       \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 23 × 2\n",
+       "\n",
+       "| experience &lt;chr&gt; | gender &lt;chr&gt; |\n",
+       "|---|---|\n",
+       "| Pro     | Male   |\n",
+       "| Veteran | Male   |\n",
+       "| Amateur | Female |\n",
+       "| ⋮ | ⋮ |\n",
+       "| Amateur | Non-binary   |\n",
+       "| Regular | Two-Spirited |\n",
+       "| Pro     | Other        |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   experience gender      \n",
+       "1  Pro        Male        \n",
+       "2  Veteran    Male        \n",
+       "3  Amateur    Female      \n",
+       "⋮  ⋮          ⋮           \n",
+       "21 Amateur    Non-binary  \n",
+       "22 Regular    Two-Spirited\n",
+       "23 Pro        Other       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#The summary statistics of players.csv\n",
     "\n",
     "summary_dataset1 <- summary(dataset1)\n",
-    "summary_dataset1"
+    "summary_dataset1\n",
+    "\n",
+    "dataset1 |>\n",
+    "distinct(experience, gender)\n"
    ]
   },
   {
@@ -262,9 +329,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73e8ea1d-1b08-47e4-a88d-83d40d778958",
+   "metadata": {},
+   "source": [
+    "## **QUESTION TO BE EXPLORED**\n",
+    "The question I want to address is what characteristics and behaviours are the most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types? More specifically, I want to explore whether the **age** and their **total time played** of a player can predict whether the player is subscribed to the game-related newsletter.  \n",
+    "\n",
+    "#### Wrangling the Data and the Predictive Method\n",
+    "I will be utilizing the players.csv file of the dataset as this includes the variables I plan to work with\n",
+    "* age\n",
+    "* played_hours\n",
+    "* subscribe\n",
+    "\n",
+    "The predictive method I plan to use is K-nearest neighbour classification, as the outcome variable will be whether the player is subscribed or not (two groups in the variable, which are TRUE or FALSE). The two predictors I plan to use are age (integer) and played_hours (dbt) which each contain 196 observations each. These predictors will allow us to observe whether they have an impact if a player is subscribed to the game-related newsletter. \n",
+    "\n",
+    "The data will have to be wrangled in order to use it for K-nearest neighbour classifcation. \n",
+    "\n",
+    "* Select the variables required (age, played_hours, subscribe)\n",
+    "* Ensure to filter out the NA's in age\n",
+    "* Turn subscribe into a factor and replace the TRUE and FALSE names of factor values with other names (subscribed and not subscribed)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d19cb7d2-5fdb-42a8-9988-b9b40672cae5",
+   "id": "54d4cc15-806b-4e0a-829c-5d567a165918",
    "metadata": {},
    "outputs": [],
    "source": []
